# QFish

./: .gitignore  docker-compose.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  ConfigurePage.tsx  HomePage.tsx  InsightsPage.tsx  Navbar.tsx  SimulatePage.tsx  api.ts  index.css  types.ts  useWebSocket.ts
python-brain/: Dockerfile  domain_extractor.py  insight_engine.py  llm_factory.py  main.py  pyproject.toml  schema.py
rust-engine/: Cargo.toml  Dockerfile
rust-engine/src/: main.rs  schema.rs  state.rs
